@@ -844,12 +844,12 @@ SQL_QUERY;
 	 * Adding Support System Control:
 	 * Admin can Enable and Disable Reseller's support system from frontend, 
 	 * belongs to ticket #1121 @see http://isp-control.net/ispcp/ticket/1121
-     *
+	 *
 	 * @author		Sebastian Sellmeier
 	 * @copyright	2006-2010 by ispCP | http://isp-control.net
 	 * @version		1.0.1
 	 * @since		r2500
-     *
+	 *
 	 * @access		protected
 	 * @return		sql statements to be performed
 	 */
@@ -858,6 +858,32 @@ SQL_QUERY;
 		$sqlUpd[] = "ALTER TABLE " .
 				    "`reseller_props` ADD `support_system` ENUM( 'yes', 'no' ) " .
 				    "NOT NULL DEFAULT 'yes' AFTER `max_traff_amnt`";
+		return $sqlUpd;
+	}
+
+	/**
+	 * Adding autoreply loop detection/prevention.
+	 *
+	 * @author		Marc pujol
+	 * @copyright	2006-2010 by ispCP | http://isp-control.net
+	 * @version		1.0.4
+	 * @since		r2592
+	 *
+	 * @access		protected
+	 * @return		sql statements to be performed
+	 */
+	protected function _databaseUpdate_28() {
+		$sqlUpd = array();
+		// Dropping the table is safe enough because the worst thing that may happen is that we
+		// autoreply twice the same sender if the update is re-applied. Not a big deal...
+		$sqlUpd[] = "DROP TABLE IF EXISTS `autoreplies_log`";
+		$sqlUpd[] = "CREATE TABLE `autoreplies_log` ( " .
+				"`time` DATETIME NOT NULL COMMENT 'Date and time of the sent autoreply', " .
+				"`from` VARCHAR( 255 ) NOT NULL COMMENT 'autoreply message sender', " .
+				"`to` VARCHAR( 255 ) NOT NULL COMMENT 'autoreply message recipient', " .
+				"INDEX ( `time` ) " .
+			") ENGINE = MYISAM CHARACTER SET utf8 COLLATE utf8_unicode_ci COMMENT = 'Sent autoreplies log table';";
+			
 		return $sqlUpd;
 	}
 
